# BarterUp-be

./: Cargo.toml
src/: config.rs  main.rs
src/dtos/: auth_dtos.rs  mod.rs  personal_dtos.rs  post_dtos.rs  profile_picture_dtos.rs
src/handlers/: auth_handlers.rs  mod.rs  post_handlers.rs  profile_handlers.rs  profile_picture_handlers.rs
src/middleware/: auth_extractor.rs
src/models/: mod.rs  personal.rs  post.rs  user.rs
src/repositories/: mod.rs  post_repository.rs  profile_supabase_repo.rs
src/services/: auth_services.rs
