[package]
name = "barterup-be"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
deadpool-postgres = { version = "0.10" } 
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
uuid = { version = "1", features = ["serde", "v4"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
jsonwebtoken = "8"
urlencoding = "2.1"
log = "0.4"
futures = "0.3"
anyhow = "1.0"
regex = "1.11.1"
base64 = "0.21"  
mime = "0.3"     
